adds header to page

--- a/about.html
+++ b/about.html
@@ -10,9 +10,13 @@
 	</head>
 	
 	<body>
-		<div>
-			
+		<div id="company_name">
+			<h1>Foodar</h1>
 		</div>
+		<div id="header">
+			<h1>How it Works</h1>
+		</div>
+		<hr>
 	
 	
 	</body>
