--- a/about.html
+++ b/about.html
@@ -18,10 +18,29 @@
 		</div>
 		<hr>
 		<h2>REGISTER FOR AN ACCOUTN</h2>
+		
+<!-- 		Paragraph one -->
 		<p>
+			The first thing you need to do is register for an account.
 			
+			After registering you will be able to submit requests for pickup and have your food delivered to your door!
 		</p>
 	
-	
+<!-- 	paragraph two -->
+		<h2>ORDER YOUR FOOD</h2>
+		<p>
+			Place an order for food from a local restaurant and the system will automatically find the nearest driver at the best cost.
+		</p>
+<!-- 		Paragraph three -->
+		<h2>
+			CONFIRM YOUR REQUEST
+		</h2>
+		
+		<p>
+			Before any request is submitted, you have the chance to review it and make any changes or cancellations.
+		</p>
+		
+<!-- 		horizonal line -->
+		<hr>
 	</body>
 </html>
