saves links to reg page

--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
 		<meta name="Foodar" content="Food Develivery Service">
 		<meta name="Resturunts deliver" content="HTML,CSS,XML,JavaScript">
 		<meta name="author" content="about">
+		<link href="layout.css" rel="stylesheet">
 		<title>About Foodar</title>
 	
 	</head>
