--- a/register.html
+++ b/register.html
@@ -6,6 +6,7 @@
   <meta name="Foodar" content="Food Develivery Service">
   <meta name="Resturunts deliver" content="HTML,CSS,XML,JavaScript">
   <meta name="author" content="about">
+  <link href="layout.css" rel="stylesheet"> 
   <title>register</title>
 </head>
   <body>
@@ -16,13 +17,13 @@
       <p>Please fill out the form below:</p>
 <!--form  -->
       <form>
-          <label>Details: </label>
+          <label>Details: </label> </br>
           <input type="email" placeholder="Email" required></br>
           <input type="password" placeholder="password" required></br>
           <input type="text" placeholder="First Name" required></br>
           <input type="text" placeholder="Last Name" required></br>
 
-          <label>Address:</label>
+          <label>Address:</label></br>
           <input type="text" placeholder="Address" required></br>
           <input type="tect" placeholder="Street" required></br>
           <input type="text" placeholder="City" required></br>
