work on css form

--- a/register.html
+++ b/register.html
@@ -16,19 +16,22 @@
     <div id="register">
       <p>Please fill out the form below:</p>
 <!--form  -->
+      <div id="details">
       <form>
           <label>Details: </label> </br>
           <input type="email" placeholder="Email" required></br>
           <input type="password" placeholder="password" required></br>
           <input type="text" placeholder="First Name" required></br>
           <input type="text" placeholder="Last Name" required></br>
-
+        </div><!-- end of Details div-->
+        <div id="address">
           <label>Address:</label></br>
           <input type="text" placeholder="Address" required></br>
           <input type="tect" placeholder="Street" required></br>
           <input type="text" placeholder="City" required></br>
           <input type="text" placeholder="Zipcode" required></br>
           <input type="submit" value="register">
+          </div><!-- end of address div-->
       </form>
     </div>
 
