corrects form to center

--- a/register.html
+++ b/register.html
@@ -6,14 +6,17 @@
   <meta name="Foodar" content="Food Develivery Service">
   <meta name="Resturunts deliver" content="HTML,CSS,XML,JavaScript">
   <meta name="author" content="about">
+  <link href="normalize.css" rel="stylesheet">
   <link href="layout.css" rel="stylesheet"> 
+
   <title>register</title>
 </head>
   <body>
+    <div id="wrapper"> 
     <div id="foodar">
       <p>Foodar</p>
       <div><!--end of foodar div-->
-    <div id="register">
+    <!-- <div id="register"> -->
       <p>Please fill out the form below:</p>
 <!--form  -->
       <div id="details">
@@ -33,7 +36,7 @@
           <input type="submit" value="register">
           </div><!-- end of address div-->
       </form>
-    </div>
-
+    <!-- </div> -->
+    </div><!--end of wrapper div-->
   </body>
 </html>
