adds footer to pages

--- a/firstpage.html
+++ b/firstpage.html
@@ -5,5 +5,15 @@
 </head>
 <body>
     <p>This is my first page!</p>
+
+
+    <footer>
+        <ul>
+            <li><a href="register.html">Register</a></li>
+            <li><a href="firstpage.html">firstpage</a></li>
+            <li><a href="about.html">about</a></li>
+
+        </ul>
+    </footer>
 </body>
 </html>
