--- a/register.html
+++ b/register.html
@@ -38,5 +38,15 @@
       </form>
     <!-- </div> -->
     </div><!--end of wrapper div-->
+
+    <!-- footer -->
+    <footer>
+			<ul>
+				<li><a href="register.html">Register</a></li>
+				<li><a href="firstpage.html">firstpage</a></li>
+				<li><a href="about.html">about</a></li>
+
+			</ul>
+		</footer>
   </body>
 </html>
