--- a/about.html
+++ b/about.html
@@ -43,5 +43,15 @@
 		
 <!-- 		horizonal line -->
 		<hr>
+
+		<!-- footer -->
+		<footer>
+			<ul>
+				<li><a href="register.html">Register</a></li>
+				<li><a href="firstpage.html">firstpage</a></li>
+				<li><a href="about.html">about</a></li>
+
+			</ul>
+		</footer>
 	</body>
 </html>
