--- a/firstpage.html
+++ b/firstpage.html
@@ -14,6 +14,8 @@
             <li><a href="about.html">about</a></li>
 
         </ul>
+
+        <p> &copy; Richard Taylor</p>
     </footer>
 </body>
 </html>
