--- a/register.html
+++ b/register.html
@@ -46,7 +46,9 @@
 				<li><a href="firstpage.html">firstpage</a></li>
 				<li><a href="about.html">about</a></li>
 
-			</ul>
+      </ul>
+      
+      <p> &copy; Richard Taylor</p>
 		</footer>
   </body>
 </html>
