update index page

--- a/index.html
+++ b/index.html
@@ -19,13 +19,40 @@ TO-DO 5. Create a footer-->
   <title>Document</title>
 </head>
 <body>
-  <!-- create a div with a id of banner. -->
-  <!-- inside the banner write "Banner Information" -->
-  <!-- create a 2nd div with Foodar logo and sign-in register -->
+  <div id="banner">
+    <p>Banner Information</p>
+  </div> <!-- create a div with an id of banner. -->
+
+  <!-- create a 2nd div with Foodar logo and sign-in register --> <div id="foodar_logo">
+        <ul>
+          <li>Foodar</li>
+          <li>Sign-in </li>
+          <li>Register</li>
+        </ul>
+  </div>
   <!-- create a div for the image -->
-  <!-- create a div for find a driver near you and content -->
-  <!-- create a footer  -->
+  <div>
+    <img src="" alt="pic of foodar logo">
+  </div> 
+  <div id="content">
+    <p> Find a driver near you!</p>
+    <p>Type in your zipcode below and click Go! to find a driver near you</p>
+    <input type="number" name="zipcode">
+    <input type="submit" value="Go!">
+    </div>
   
+  <!-- create a footer  -->
+    <footer>
+      <address>
+        &copy; 2015. All rights reserved
+        <ul>
+          <li>Home</li>
+          <li>Privacy Policy</li>
+          <li>Terms & Conditions</li>
+        </ul>
+        
+      </address>
+    </footer>
 </body>
 </html>
 
