updates index page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ TO-DO 5. Create a footer-->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="layout.css" rel="stylesheet">
   <title>Document</title>
 </head>
 <body>
@@ -23,13 +24,13 @@ TO-DO 5. Create a footer-->
     <p>Banner Information</p>
   </div> <!-- create a div with an id of banner. -->
 
-  <!-- create a 2nd div with Foodar logo and sign-in register --> <div id="foodar_logo">
+  <!-- create a 2nd div with Foodar logo and sign-in register --> <nav id="foodar_logo">
         <ul>
           <li>Foodar</li>
           <li>Sign-in </li>
           <li>Register</li>
         </ul>
-  </div>
+      </nav>
   <!-- create a div for the image -->
   <div>
     <img src="" alt="pic of foodar logo">
